Added Metadata to main heading

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ permalink: "/"
 ref: index
 lang: en
 layout: default
-excerpt: You're in control. We're with you along the way.
+excerpts: This is the portfolio of Tiffany Crow
+variable: whatever
 ---
-
